Fix horizontal scroll on Kanban and Taskboard

--- a/app/styles/layout/taskboard.scss
+++ b/app/styles/layout/taskboard.scss
@@ -1,4 +1,6 @@
 .taskboard {
+    display: flex;
+    flex-direction: column;
     height: $main-height;
     overflow: hidden;
     position: relative;
